--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ _posts/2022-08-22-Google-Blog-Post.md
 _posts/2022-08-22-seinfeld-bee.md
 _posts/2022-08-26-Bash.md
 _posts/2022-08-26-New-Quiz.md
+_posts/2022-09-06-InfoDbWork.md
