--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ _posts/2022-08-26-Bash.md
 _posts/2022-08-26-New-Quiz.md
 _posts/2022-09-06-InfoDbWork.md
 _posts/2022-09-12-createTask.md
+_posts/2022-09-21-JS.md
