--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ _posts/2022-08-26-New-Quiz.md
 _posts/2022-09-06-InfoDbWork.md
 _posts/2022-09-12-createTask.md
 _posts/2022-09-21-JS.md
+_posts/2022-09-26-Javascript.md
