all lessons changes

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ _posts/2022-09-06-InfoDbWork.md
 _posts/2022-09-12-createTask.md
 _posts/2022-09-21-JS.md
 _posts/2022-09-26-Javascript.md
+_posts/2022-11-28-1stGroup.md
+_posts/2022-11-29-G2.md
+_posts/2022-11-30-Activity.md
+_posts/2022-12-02-Group3a.md
+_posts/2022-11-30-randomvalues.md
+_posts/2022-12-05-final_Iteration_lesson.md
+_posts/2022-12-06-lessonComplete.md
+_posts/2022-12-07-developing-procedures.md
+_posts/2022-12-09-vocab.md
+_posts/2022-12-12-Simulations.md
+_posts/2022-12-18-dd-lesson.md
+settings.ini
